[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-search"
version = "0.2.0"
description = "Search across Claude Code sessions with interactive resume"
requires-python = ">=3.11"

[project.optional-dependencies]
bm25 = ["rank-bm25"]

[project.scripts]
claude-search = "claude_search.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
